tests/thymeleaf-spring6-tests/src/test/resources/templateengine/springintegration/errors/errors19.thtest
%EXTENDS ../springintegration.common
# ------------------------------------------------------------
%CONTEXT

bindingError01 = #{ 'binding' : 'formBean01_01',\
                    'field' : 'name',\
                    'message' : 'Name has to be < than \\'aa\\''}
bindingError02 = #{ 'binding' : 'formBean01_01',\
                    'field' : null,\
                    'message' : 'Name has to be >= than \\'ab\\''}
                    
bindingErrors = { bindingError01, bindingError02 }
# ------------------------------------------------------------
%INPUT
<form action="#" th:action="@{/process}" th:object="${formBean01_01}" method="post">

<div th:errors="*"></div>
<div th:errors="all"></div>
<div th:errors="global"></div>
<div th:errors="*{*}"></div>
<div th:errors="*{all}"></div>
<div th:errors="*{global}"></div>
<div th:errors="*{name}"></div>
<div th:errors="*{date}"></div>

<div th:text="${#fields.hasErrors('*')}"></div>
<div th:text="${#fields.hasErrors('all')}"></div>
<div th:text="${#fields.hasErrors('global')}"></div>
<div th:text="${#fields.hasErrors('*{*}')}"></div>
<div th:text="${#fields.hasErrors('*{all}')}"></div>
<div th:text="${#fields.hasErrors('*{global}')}"></div>
<div th:text="${#fields.hasErrors('*{name}')}"></div>
<div th:text="${#fields.hasErrors('*{date}')}"></div>

  <fieldset>


    <div>
      Name: <input type="text" th:field="*{name}" />
    </div>
    
  </fieldset>
      
</form>
# ------------------------------------------------------------
%OUTPUT
<form action="/testing/process" method="post">

<div>Name has to be &lt; than &#39;aa&#39;<br />Name has to be &gt;= than &#39;ab&#39;</div>
<div>Name has to be &lt; than &#39;aa&#39;<br />Name has to be &gt;= than &#39;ab&#39;</div>
<div>Name has to be &gt;= than &#39;ab&#39;</div>
<div>Name has to be &lt; than &#39;aa&#39;<br />Name has to be &gt;= than &#39;ab&#39;</div>
<div>Name has to be &lt; than &#39;aa&#39;<br />Name has to be &gt;= than &#39;ab&#39;</div>
<div>Name has to be &gt;= than &#39;ab&#39;</div>
<div>Name has to be &lt; than &#39;aa&#39;</div>


<div>true</div>
<div>true</div>
<div>true</div>
<div>true</div>
<div>true</div>
<div>true</div>
<div>true</div>
<div>false</div>

  <fieldset>
      

    <div>
      Name: <input type="text" id="name" name="name" value="Mark Lettuce" />
    </div>
    
  </fieldset>
      
</form>
